--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-build/
-CMakeLists.txt
-./__pycache__
-./data/*.txt
+/build/
+/CMakeLists.txt
+/__pycache__
+/.ipynb_checkpoints
+/data/*.txt
+/README.ipynb
 
